Algumas funcoes basicas criadas
as funcoes booleanas mesmoNaipe e mesmoNumero ainda n estao implementadas corretamente

--- a/Jogo de Burro/nbproject/project.properties
+++ b/Jogo de Burro/nbproject/project.properties
@@ -25,9 +25,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Jogo_de_Burro.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.apicartas.jar=D:\\Documentos\\NetBeansProjects\\Baralho\\Baralho\\Baralho\\build\\apicartas.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.apicartas.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
